--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,34 @@
 <p>login works!</p>
 
+<form (submit)="login()">
+
+    <tr>
+        <td>
+            <div>
+                <h1 >usuario</h1>
+            </div>
+        </td>
+        <td>
+            <input name="usuario" type="text" [(ngModel)]="userName" > 
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div>
+                <h1 >password</h1>
+            </div>
+        </td>
+        <td>
+            <input name="password" type="password" [(ngModel)]="password">  
+        </td>
+    </tr>
+
+    <div>
+        <button type="submit">Login</button>
+    </div>
+
+</form>
+
 <br>
 <br>
 <br>
