se agrega resultado

--- a/src/app/pages/resultado/resultado.component.html
+++ b/src/app/pages/resultado/resultado.component.html
@@ -1,1 +1,17 @@
 <p>resultado works!</p>
+
+<br>
+<br>
+<table class="table table-bordered">
+
+    <tbody>
+        <tr *ngFor="let usuario of listaUsuarios">
+            <td >
+                {{usuario}}
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<br>
+<br>
